bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u32.rs
use bitbybit::bitfield;

#[bitfield(u32, default = 0)]
struct Test {
    #[bits([0, 31..=32], rw)]
    multi_bit_field: u3,
}

fn main() {}
