bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u32.stderr
error: bitfield!: Field multi_bit_field requires 33 bits, but only has (32)
 --> tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u32.rs:5:5
  |
5 |     #[bits([0, 31..=32], rw)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
